--- a/Vidly001/Vidly001.csproj
+++ b/Vidly001/Vidly001.csproj
@@ -19,7 +19,7 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort />
+    <IISExpressSSLPort>44335</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -279,15 +279,44 @@
     <Compile Include="Migrations\201806261328238_NewValidationMovieNameRequired.Designer.cs">
       <DependentUpon>201806261328238_NewValidationMovieNameRequired.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807011012555_SeedUsers.cs" />
+    <Compile Include="Migrations\201807011012555_SeedUsers.Designer.cs">
+      <DependentUpon>201807011012555_SeedUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807011127116_AddDrivingLicenceToApplicationUser.cs" />
+    <Compile Include="Migrations\201807011127116_AddDrivingLicenceToApplicationUser.Designer.cs">
+      <DependentUpon>201807011127116_AddDrivingLicenceToApplicationUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807011349449_AddPhonePropertyToApplicationCOntext.cs" />
+    <Compile Include="Migrations\201807011349449_AddPhonePropertyToApplicationCOntext.Designer.cs">
+      <DependentUpon>201807011349449_AddPhonePropertyToApplicationCOntext.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AccountManagment\ForgotPasswordViewModel.cs" />
+    <Compile Include="Models\ViewModelsManagment\ConfigureTwoFactorViewModel.cs" />
+    <Compile Include="Models\ViewModelsManagment\VerifyPhoneNumberViewModel.cs" />
+    <Compile Include="Models\ViewModelsManagment\AddPhoneNumberViewModel.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\ViewModelsManagment\ChangePasswordViewModel.cs" />
     <Compile Include="Models\Entity\Customer.cs" />
     <Compile Include="Models\Entity\Genre.cs" />
     <Compile Include="Models\Entity\MembershipType.cs" />
     <Compile Include="Models\Entity\Movie.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\AccountManagment\ExternalLoginConfirmationViewModel.cs" />
+    <Compile Include="Models\AccountManagment\ExternalLoginListViewModel.cs" />
+    <Compile Include="Models\AccountManagment\ForgotViewModel.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\AccountManagment\LoginViewModel.cs" />
+    <Compile Include="Models\ViewModelsManagment\SetPasswordViewModel.cs" />
+    <Compile Include="Models\ViewModelsManagment\FactorViewModel.cs" />
+    <Compile Include="Models\IndexViewModel.cs" />
+    <Compile Include="Models\ViewModelsManagment\ManageLoginsViewModel.cs" />
     <Compile Include="Models\Min18YearsIsAMember.cs" />
+    <Compile Include="Models\AccountManagment\RegisterViewModel.cs" />
+    <Compile Include="Models\AccountManagment\ResetPasswordViewModel.cs" />
+    <Compile Include="Models\RoleName.cs" />
+    <Compile Include="Models\AccountManagment\SendCodeViewModel.cs" />
+    <Compile Include="Models\AccountManagment\VerifyCodeViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerViewModel.cs" />
@@ -530,13 +559,15 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Customer\List.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
-    <Content Include="Views\Movie\Index.cshtml" />
+    <Content Include="Views\Movie\List.cshtml" />
     <Content Include="Views\Movie\Details.cshtml" />
     <Content Include="Views\Customer\Details.cshtml" />
     <Content Include="Views\Customer\CustomerForm.cshtml" />
     <Content Include="Views\Movie\CreateForm.cshtml" />
+    <Content Include="Views\Movie\ReadOnlyList.cshtml" />
+    <Content Include="Views\Customer\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -597,6 +628,15 @@
     <EmbeddedResource Include="Migrations\201806261328238_NewValidationMovieNameRequired.resx">
       <DependentUpon>201806261328238_NewValidationMovieNameRequired.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807011012555_SeedUsers.resx">
+      <DependentUpon>201807011012555_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807011127116_AddDrivingLicenceToApplicationUser.resx">
+      <DependentUpon>201807011127116_AddDrivingLicenceToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807011349449_AddPhonePropertyToApplicationCOntext.resx">
+      <DependentUpon>201807011349449_AddPhonePropertyToApplicationCOntext.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -616,7 +656,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>60635</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:60635/</IISUrl>
+          <IISUrl>https://localhost:44335/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
