--- a/Vidly001/Vidly001.csproj
+++ b/Vidly001/Vidly001.csproj
@@ -227,14 +227,17 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\API\CustomersController.cs" />
     <Compile Include="Controllers\API\MoviesController.cs" />
+    <Compile Include="Controllers\API\RentalsController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MovieController.cs" />
+    <Compile Include="Controllers\RentalController.cs" />
     <Compile Include="DTOs\CustomerDTO.cs" />
     <Compile Include="DTOs\GenreDTO.cs" />
     <Compile Include="DTOs\MembershipTypeDTO.cs" />
     <Compile Include="DTOs\MovieDTO.cs" />
+    <Compile Include="DTOs\RentalsDTO.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -307,8 +310,21 @@
     <Compile Include="Migrations\201807011349449_AddPhonePropertyToApplicationCOntext.Designer.cs">
       <DependentUpon>201807011349449_AddPhonePropertyToApplicationCOntext.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807021046540_AddNewTable_Rental.cs" />
+    <Compile Include="Migrations\201807021046540_AddNewTable_Rental.Designer.cs">
+      <DependentUpon>201807021046540_AddNewTable_Rental.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807021108035_AddNewColumn_Movie_NumberAvailable.cs" />
+    <Compile Include="Migrations\201807021108035_AddNewColumn_Movie_NumberAvailable.Designer.cs">
+      <DependentUpon>201807021108035_AddNewColumn_Movie_NumberAvailable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807021316308_UpdateValidationDateReturned_NullTrue.cs" />
+    <Compile Include="Migrations\201807021316308_UpdateValidationDateReturned_NullTrue.Designer.cs">
+      <DependentUpon>201807021316308_UpdateValidationDateReturned_NullTrue.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountManagment\ForgotPasswordViewModel.cs" />
+    <Compile Include="Models\Entity\Rental.cs" />
     <Compile Include="Models\ViewModelsManagment\ConfigureTwoFactorViewModel.cs" />
     <Compile Include="Models\ViewModelsManagment\VerifyPhoneNumberViewModel.cs" />
     <Compile Include="Models\ViewModelsManagment\AddPhoneNumberViewModel.cs" />
@@ -453,10 +469,13 @@
     <Content Include="Content\DataTables\images\sort_desc.png" />
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
+    <Content Include="Content\typeahead.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bloodhound.js" />
+    <Content Include="Scripts\bloodhound.min.js" />
     <Content Include="Scripts\bootbox.js" />
     <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -541,6 +560,10 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\typeahead.bundle.js" />
+    <Content Include="Scripts\typeahead.bundle.min.js" />
+    <Content Include="Scripts\typeahead.jquery.js" />
+    <Content Include="Scripts\typeahead.jquery.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -586,6 +609,7 @@
     <Content Include="Views\Movie\CreateForm.cshtml" />
     <Content Include="Views\Movie\ReadOnlyList.cshtml" />
     <Content Include="Views\Customer\ReadOnlyList.cshtml" />
+    <Content Include="Views\Rental\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -654,6 +678,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807011349449_AddPhonePropertyToApplicationCOntext.resx">
       <DependentUpon>201807011349449_AddPhonePropertyToApplicationCOntext.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807021046540_AddNewTable_Rental.resx">
+      <DependentUpon>201807021046540_AddNewTable_Rental.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807021108035_AddNewColumn_Movie_NumberAvailable.resx">
+      <DependentUpon>201807021108035_AddNewColumn_Movie_NumberAvailable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807021316308_UpdateValidationDateReturned_NullTrue.resx">
+      <DependentUpon>201807021316308_UpdateValidationDateReturned_NullTrue.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
